--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@ body {
 .block {
     position: absolute;
     list-style-type: none;
-    width: 400px;
-    height: 75px;
+    /* width: 400px;
+    height: 75px; */
     display: none;
     z-index: 100;
 }
